--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
       name="keywords"
       content="Muhammad Fauzan, Fauzan, portfolio, personal portfolio, portfolio design, portfolio website"
     />
-    <meta
-      name="description"
-      content="Welcome to Fauzan's Portfolio. Web Developer"
-    />
+    <meta name="description" content="Welcome to My Portfolio. Web Developer" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -62,9 +59,9 @@
             <li class="nav-item mx-2">
               <a class="nav-link" href="#project">Projects</a>
             </li>
-            <li class="nav-item mx-2">
+            <!-- <li class="nav-item mx-2">
               <a class="nav-link" href="#">Blog</a>
-            </li>
+            </li> -->
           </ul>
           <form>
             <a
@@ -155,24 +152,31 @@
             <h3>I'm Fauzan</h3>
             <span class="tagline">Web Developer</span>
             <p>
-              Now, I'm 23 years old. I based in Malang, East Java. I'm graduated
-              from Politeknik Negeri Malang majoring in Informatic Engineering.
-              I very passionate about improving my coding skills & developing
-              websites. If you are interested in hiring me, please contact the
-              listed contact.
+              Now, I'm 23 years old. I based in Malang, East Java. I am a Web
+              Developer with expertise in Laravel, Next.js, and React.
+              Experienced in building scalable, interactive, and efficient web
+              applications, I focus on development with PHP Framework(Laravel)
+              and React Framework(Next.js).
+              <br />
+              <br />I also have a strong understanding of RESTful APIs, database
+              management, and integrating various services such as payment
+              gateways and real-time notifications. With a passion for
+              continuous learning and growth, I strive to create innovative and
+              high-quality digital solutions. If you are interested in hiring
+              me, please contact the listed contact.
             </p>
             <div class="hire-me">
               <p>
                 <span>
                   <i class="fa fa-envelope"></i>
-                  Email :
+                  Email:
                 </span>
                 mufauzan18@gmail.com
               </p>
               <p>
                 <span>
                   <i class="fa fa-map-marked"></i>
-                  Place :
+                  Place:
                 </span>
                 Malang, East Java
               </p>
@@ -222,6 +226,21 @@
               />
               <img
                 draggable="false"
+                src="assets/img/skills/icons8-react.svg"
+                alt="React"
+              />
+              <img
+                draggable="false"
+                src="assets/img/skills/icons8-typescript.svg"
+                alt="typescript"
+              />
+              <img
+                draggable="false"
+                src="assets/img/skills/icons8-nextjs.svg"
+                alt="nextjs"
+              />
+              <img
+                draggable="false"
                 src="assets/img/skills/php-svgrepo.svg"
                 alt="Php"
               /><img
@@ -233,6 +252,11 @@
                 draggable="false"
                 src="assets/img/skills/icons8-bootstrap.svg"
                 alt="Bootstrap"
+              />
+              <img
+                draggable="false"
+                src="assets/img/skills/icons8-tailwindcss.svg"
+                alt="Tailwindcss"
               />
             </div>
           </div>
@@ -294,7 +318,7 @@
         <div class="title" data-aos="fade-down" data-aos-duration="1000">
           <h2 class="text-center">
             <i class="fa fa-laptop-code"></i>
-            Projects
+            Develop by Me
           </h2>
         </div>
         <div
@@ -302,10 +326,10 @@
           data-aos="fade-down"
         ></div>
         <div class="viewall-btn d-flex my-5">
-          <a href="#project" class="btn btn-outline-light" data-aos="fade-down">
+          <!-- <a href="#project" class="btn btn-outline-light" data-aos="fade-down">
             <span>View All</span>
             <i class="fas fa-angle-right"></i>
-          </a>
+          </a> -->
         </div>
       </div>
     </section>
@@ -359,10 +383,10 @@
             <i class="fa fa-arrow-circle-right"></i>
             Projects</a
           >
-          <a href="https://fauzanmuh.github.io/portfolioKu/">
+          <!-- <a href="https://fauzanmuh.github.io/portfolioKu/">
             <i class="fa fa-arrow-circle-right"></i>
             Blog</a
-          >
+          > -->
         </div>
         <div class="content d-flex flex-column">
           <h4>Contact</h4>
@@ -402,11 +426,11 @@
       </div>
       <div class="bottom">
         <div class="text-center p-4">
-          © 2024 Copyright:
+          © 2025 Copyright
           <a
             class="text-reset fw-bold"
             href="https://fauzanmuh.github.io/portfolioKu/"
-            >Muhammad Fauzan</a
+            >Fauzans</a
           >
         </div>
       </div>
